# urban-footprinter

./: .bumpversion.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATES/: bug.md
.github/workflows/: dev.yml  release.yml  tests.yml
docs/: Makefile  api.md  conf.py  environment.yml  index.md
docs/src/: conf.py  index.rst  references.bib  urban-footprinter.rst
notebooks/: overview.ipynb
notebooks/data/: zurich.tif
tests/: test_urban_footprinter.py
urban_footprinter/: __init__.py  settings.py  windowed.py
