[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[project]
name = "urban-footprinter"
version = "0.3.1"
description = "A convolution-based approach to detect urban extents."
readme = "README.md"
authors = [
  {name = "Martí Bosch", email = "marti.bosch@epfl.ch"}
]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "numpy >= 1.15",
  "opencv-python >= 4.0.0",
  "pandas >= 0.19.0", # only for is_list_like
  "rasterio >= 1.0.0",
  "scipy >= 1.0.0",
  "shapely >= 1.0.0"
]
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.optional-dependencies]
test = ["black", "coverage[toml]", "pytest", "pytest-cov", "python-dotenv", "ruff"]
dev = ["commitizen", "pre-commit", "pip", "toml", "tox", "twine", "uv"]
doc = ["myst-parser", "sphinx"]

[project.urls]
Repository = "https://github.com/martibosch/urban-footprinter"

[tool.codespell]
ignore-words-list = "Makse"
skip = "CHANGELOG.md,notebooks/overview.ipynb"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_files = [
  "urban_footprinter/__init__.py",
  "pyproject.toml:version"
]

[tool.coverage.report]
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "except ModuleNotFoundError",
  "except ImportError"
]
ignore_errors = true
omit = ["tests/*", "docs/conf.py"]

[tool.coverage.run]
source = ["urban_footprinter"]

[tool.pixi.dependencies]
gdal = ">=3"
pyproj = ">=3.7.2,<4"
python = ">=3.10,<3.14"

[tool.pixi.environments]
dev = ["dev"]
doc = ["doc"]
test = ["test"]

[tool.pixi.feature.dev.tasks]
build = {cmd = "uv build"}
check = {cmd = "twine check dist/*", depends-on = ["build"]}

[tool.pixi.feature.doc.tasks]
build-doc = {cmd = "sphinx-build docs docs/_build"}

[tool.pixi.feature.test.tasks]
test = {cmd = "pytest -s --cov=urban_footprinter --cov-report=xml tests"}

[tool.pixi.workspace]
name = "urban-footprinter"
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "I"]

[tool.ruff.isort]
known-first-party = ["urban_footprinter"]

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/test_urban_footprinter.py" = ["D"]

[tool.uv.build-backend]
module-name = "urban_footprinter"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
